[tool.poetry]
name = "Shikabala"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
statsbomb = "^0.3.0"
mplsoccer = "^1.0.5"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
lxml = "^4.8.0"
html5lib = "^1.1"
selenium = "^4.1.3"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
fc = "^0.1.12"
plotly = "^5.7.0"
ScraperFC = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 83
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''